language/move-lang/tests/move_check/parser/hexstring_token_eof1.move
module M {
    public fun foo(): vector<u8> {
        x"
